fix overflowing boxshadow on project image

--- a/src/pages/projects/index.scss
+++ b/src/pages/projects/index.scss
@@ -33,10 +33,12 @@ main.project__page {
 	}
 
 	& picture {
+		display: grid;
 		max-width: 100%;
 		transform: rotate(3deg);
 		box-shadow: 0 2px 10px -5px var(--grey500);
-		display: grid;
+		border-radius: 0.8rem;
+		overflow: hidden;
 	}
 
 	& .title__wrapper {
@@ -47,7 +49,6 @@ main.project__page {
 	& .hero {
 		max-width: 100%;
 		height: auto;
-		border-radius: 0.8rem;
 	}
 
 	& .links__wrapper {
